fixing buttons on iphone layout

--- a/css/main.scss
+++ b/css/main.scss
@@ -281,13 +281,13 @@ section {
     color: var(--bg);
     
     padding: .8em;
-    line-height: .8;
+    line-height: 1;
     border-radius: 1em;
     position: relative;
     
     text-decoration: none;
     font-family: var(--font);
-    font-size: 1.25rem;
+    font-size: 1rem;
 }
 
 .button:before,
